# DevFlow

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  cli.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  executor.py
api/: __init__.py  main.py  routes.py  schemas.py
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/: __init__.py  config.py  schemas.py
apps/api/src/agent/: core.py  memory.py  planner.py  prompts.py  workflow.py
apps/api/src/api/: main.py  routes.py
apps/api/src/database/: models.py  session.py
apps/api/src/llm/: __init__.py  base.py  deepseek.py  kimi.py  router.py
apps/api/src/tools/: __init__.py  git_ops.py  repo.py  sandbox.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/runs/[id]/: page.tsx
apps/web/src/app/runs/new/: page.tsx
apps/web/src/lib/: api.ts
database/: __init__.py  models.py  session.py
infra/: docker-compose.yml
infra/docker/: api.Dockerfile  web.Dockerfile
tests/: __init__.py  evaluate.py  test_smoke.py
tests/eval_set/: README.md
tools/: __init__.py  git_ops.py  sandbox.py
