[project]
name = "devflow-api"
version = "0.1.0"
description = "DevFlow Agent API — developer workflow automation backend"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Orchestration
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    
    # Database
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.25",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.0",
    
    # Queue
    "redis>=5.0.0",
    
    # LLM Clients (OpenAI-compatible)
    "httpx>=0.26.0",
    "openai>=1.10.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    
    # AST Parsing
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
